force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__rel_1723127832080_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723127832080_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthcarePractitionerFacility_Healt_rel</label>
    <referenceTo>ssot__HealthcareFacility__dlm</referenceTo>
    <relationshipLabel>HealthcarePractitionerFacility_Healt_rel</relationshipLabel>
    <relationshipName>rel_1723127832080_end</relationshipName>
    <type>Lookup</type>
</CustomField>