force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__rel_1724385427163_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724385427163_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthcarePractitionerFacility_Pract_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>HealthcarePractitionerFacility_Pract_rel</relationshipLabel>
    <relationshipName>rel_1724385427163_end</relationshipName>
    <type>Lookup</type>
</CustomField>