force-app/main/default/objects/ssot__HealthcarePractitionerFacility__dlm/fields/ssot__rel_1726825242987_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726825242987_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthcarePractitionerFacility_Servi_rel</label>
    <referenceTo>ssot__ServiceTerritoryResource__dlm</referenceTo>
    <relationshipLabel>HealthcarePractitionerFacility_Servi_rel</relationshipLabel>
    <relationshipName>rel_1726825242987_end</relationshipName>
    <type>Lookup</type>
</CustomField>